# hse-sundai-telegram-digital-twin

./: .env  .env.template  .gitignore  README.md  bot_session.session  config.py  listen_to_messages.py  main.py  pyproject.toml  session_name.session  stickers.json
data/: pandas_test.py
handlers/: command_handlers.py  group_handlers.py  message_handlers.py  private_message_handlers.py  sticker_handlers.py
notebooks/: create_tts.ipynb
notebooks/.ipynb_checkpoints/: create_tts-checkpoint.ipynb
scripts/: list_group_ids.py
services/: sticker_service.py
src/: agent.py  agent2.py  telegram_bot.py  tts.py
utils/: telegram_utils.py
