[project]
name = "telegram-digital-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.9,<3.12"
dependencies = [
    "coqui-tts>=0.25.3",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "telethon>=1.40.0",
]
